updated model_fitting.R and added LaTeX resources

--- a/LaTeX/microbusiness-forecasting.tex
+++ b/LaTeX/microbusiness-forecasting.tex
@@ -1,100 +1,82 @@
-\documentclass[12pt, titlepage]{article}
-\usepackage[a4paper, width = 140mm, top = 20mm, bottom = 20mm]{geometry}
-\usepackage{authblk}
-\usepackage{fancyhdr}
-\usepackage{lastpage}
-\makeatother
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{0pt}
-\makeatletter
-\usepackage[T1]{fontenc}
-\usepackage{inter}
-\usepackage{ebgaramond}
-\usepackage[labelfont = sc]{caption}
-\usepackage{graphicx}
-\usepackage{amsmath, amsfonts}
-\newcommand{\source}[1]{\footnotesize\caption*{\emph{Source}: {#1}}} %
-\newcommand{\note}[1]{\footnotesize\caption*{\emph{Note}: {#1}}} %
-\usepackage{booktabs}
-\usepackage{graphicx}
-\usepackage[flushleft]{threeparttable}
-\usepackage{authblk}
-\usepackage[font=sf]{caption}
-\usepackage{subcaption}
-\usepackage{textpos}
-\usepackage[figuresleft]{rotating}
-\usepackage{ragged2e}
-\usepackage{titlesec}
-\usepackage{titling}
-\usepackage{sectsty}
-\sectionfont{\sffamily\mdseries\clearpage}
-\subsectionfont{\sffamily\mdseries}
-\subsubsectionfont{\sffamily\mdseries}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Cascade Analytics Working Paper
+% LaTeX Template
+% Version 1.0 (January 4th, 2022)
+%
+% This template originates from:
+% https://www.LaTeXTemplates.com
+%
+% Author:
+% Vel (vel@latextemplates.com)
+%
+% License:
+% CC BY-NC-SA 4.0 (https://creativecommons.org/licenses/by-nc-sa/4.0/)
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%----------------------------------------------------------------------------------------
+%	CLASS, PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%----------------------------------------------------------------------------------------
+
+\documentclass[
+a4paper, % Paper size, use either a4paper or letterpaper
+12pt, % Default font size, the template is designed to look good at 12pt so it's best not to change this
+%unnumberedsections, % Uncomment for no section numbering
+]{CascadeAnalyticsWPS}
+
+%\addbibresource{sample.bib} % BibLaTeX bibliography file
 \usepackage[authoryear]{natbib}
-\usepackage[colorlinks]{hyperref}
-\hypersetup{
-	linkcolor=blue,
-	citecolor=blue,
-	urlcolor=blue
-}
-\usepackage{relsize}
-\usepackage{setspace}
-\clubpenalty=100000
-\widowpenalty=10000
-\singlespacing
-\pagenumbering{arabic}
-\captionsetup{singlelinecheck=false}
-\numberwithin{equation}{section}
-\usepackage[hang,flushmargin, bottom]{footmisc}
-
-\newcommand\blfootnote[1]{%
-	\begingroup
-	\renewcommand\thefootnote{}\footnote{#1}%
-	\addtocounter{footnote}{-1}%
-	\endgroup
-}
-
-\usepackage[font=sf]{floatrow}
-\usepackage{enumitem}
-\setlist{nolistsep}
-
-% Company trademark, remove if submitting to journal
-\pagestyle{fancy}
-\fancyhead{}
-\fancyfoot{}
-\fancyfoot[C]{\copyright Cascade Analytics 2022, all rights reserved.  | Page \thepage{} of \pageref{LastPage}}
-\fancyfoot[L]{
-}
-\fancyfoot[R]{\includegraphics[width=1.5cm]{company.png}}
-\renewcommand\footrulewidth{0pt}
-
+\bibliographystyle{aea}
 \renewcommand{\bibsection}{\section{References}}
+%----------------------------------------------------------------------------------------
+%	REPORT INFORMATION
+%----------------------------------------------------------------------------------------
 
-\date{}
+\reporttitle{Microbusiness Density} % The report title to appear on the title page and page headers, do not create manual new lines here as this will carry over to page headers
 
-\renewcommand\Affilfont{\itshape\small}
+\reportsubtitle{} % Report subtitle, include new lines if needed
+
+\reportauthors{Anthony P\'erez Eisenbarth and Brian P\'erez Eisenbarth} % Report authors/group/department, include new lines if needed
+
+\reportdate{\today} % Report date, include new lines for additional information if needed
+
+
+%----------------------------------------------------------------------------------------
 
 \begin{document}
+	
+	%----------------------------------------------------------------------------------------
+	%	TITLE PAGE
+	%----------------------------------------------------------------------------------------
+	
+	\thispagestyle{empty} % Suppress headers and footers on this page
 	\begin{titlepage}
 		\centering
-		\includegraphics[width =6cm]{company.png}\\
-		\LARGE{\sffamily{Microbusiness Density Forecasting}}\\
+		\includegraphics[width =6cm]{company.png}\\ \vspace{5mm}	
+		{\LARGE\sffamily\mdseries\reporttitle} \\ %Report title		
+		\vspace{5mm}	
+		{\normalsize{\reportauthors}}\blfootnote{aperez@cascade-analytics.com, bperez@cascade-analytics.com} \\ % Report authors, group or department
 		\vspace{5mm}
-		\normalsize{Anthony P\'erez Eisenbarth\(^1\) and Brian P\'erez Eisenbarth\(^1\)}\\
-		\vspace{5mm}
-		\textit{
-			\(^1\)Cascade Analytics\\
-			\vspace{1mm}
-			aperez@cascade-analytics.com, bperez@cascade-analytics.com
-		}
-	\end{titlepage}
-	\tableofcontents 
-	\addtocontents{toc}{\protect\thispagestyle{empty}}
-	\pagenumbering{gobble}
+		{\textbf{\normalsize{Abstract}}}\\
+		\vspace{3mm}
+		{\justifying{\footnotesize{We study the density of microbusiness activity in local labor markets across the United States.}}} 
+		\vfill\vfill\vfill % Vertical whitespace	
+		{\large\reportdate\par} % Report date
+	\end{titlepage}	
+	\newpage
+	%----------------------------------------------------------------------------------------
+	%	TABLE OF CONTENTS
+	%----------------------------------------------------------------------------------------
+	
+	\tableofcontents
+	\protect\thispagestyle{empty}
 	\cleardoublepage
 	\pagenumbering{arabic}
-	\section{Introduction}
-	\normalsize
+	
+	\newpage
+
+\section{Introduction}
+	
 In developed countries, microbusinesses (those employing fewer than 10 people) and home-based businesses have been systematically overlooked in urban economic development thinking. 
 
 \end{document}
