--- a/LaTeX/refs.bib
+++ b/LaTeX/refs.bib
@@ -9,7 +9,7 @@ note = {The M3- Competition},
 issn = {0169-2070},
 doi = {https://doi.org/10.1016/S0169-2070(00)00066-2},
 url = {https://www.sciencedirect.com/science/article/pii/S0169207000000662},
-author = {V. Assimakopoulos and K. Nikolopoulos},
+author = {Vasillios Assimakopoulos and Kostas Nikolopoulos},
 keywords = {M3-Competition, Time series, Univariate forecasting method},
 abstract = {This paper presents a new univariate forecasting method. The method is based on the concept of modifying the local curvature of the time-series through a coefficient ‘Theta’ (the Greek letter θ), that is applied directly to the second differences of the data. The resulting series that are created maintain the mean and the slope of the original data but not their curvatures. These new time series are named Theta-lines. Their primary qualitative characteristic is the improvement of the approximation of the long-term behavior of the data or the augmentation of the short-term features, depending on the value of the Theta coefficient. The proposed method decomposes the original time series into two or more different Theta-lines. These are extrapolated separately and the subsequent forecasts are combined. The simple combination of two Theta-lines, the Theta=0 (straight line) and Theta=2 (double local curves) was adopted in order to produce forecasts for the 3003 series of the M3 competition. The method performed well, particularly for monthly series and for microeconomic data.}
 }
@@ -30,6 +30,42 @@ volume = {29},
 number  = {9},
 pages = {987-996},
 year = {1983}
+}
+@article{makridakis2000,
+title = {The M3 Competition: Results, Conclusions and Implications},
+author = {Sypros Makridakis and Mich\`ele Hibon},
+journal = {International Journal of Forecasting},
+volume = {16},
+number  = {4},
+pages = {451-479},
+year = {2000}
+}
+@article{makridakis2020,
+title = {The M4 Competition: 100,000 Time Series and 61 Forecasting Methods},
+author = {Sypros Makridakis and Evangelos Spiliotis and Vassilios Assimakopoulos},
+journal = {International Journal of Forecasting},
+volume = {36},
+number  = {1},
+pages = {54-74},
+year = {2020}
+}
+@article{hyndman2008,
+author = {Rob J. Hyndman and Yeasmin Khandakar},
+title = {Automatic Time Series Forecasting: The forecast Package for R},
+journal = {Journal of Statistical Software},
+volume = {27},
+number = {3},
+pages = {1-22},
+year = {2008}
+}
+@article{hyndman2002,
+author = {Rob J. Hyndman and Anne B. Koehler and Ralph D Synder and Simone Grose},
+title = {A State Space Framework for Automatic Forecasting Using Exponential Smoothing Methods},
+journal = {International Journal of Forecasting},
+volume = {18},
+number = {3},
+pages = {439-454},
+year = {2002}
 }
 @article{martin2022,
 title = {Optimal Probabilistic Forecasts: When do They Work?},
@@ -174,35 +210,15 @@ abstract = {Forecast combinations have flourished remarkably in the forecasting 
  year = {1974}
 }
 
-@article{winkler83,
- ISSN = {00359238},
- URL = {http://www.jstor.org/stable/2982011},
- abstract = {Aggregating information by combining forecasts from two or more forecasting methods is an alternative to using just a single method. In this paper we provide extensive empirical results showing that combined forecasts obtained through weighted averages can be quite accurate. Five procedures for estimating weights are investigated, and two appear to be superior to the others. These two procedures provide forecasts that are more accurate overall than forecasts from individual methods. Furthermore, they are superior to forecasts found from a simple unweighted average of the same methods.},
- author = {Robert L. Winkler and Spyros Makridakis},
- journal = {Journal of the Royal Statistical Society. Series A (General)},
- number = {2},
- pages = {150--157},
- publisher = {[Royal Statistical Society, Wiley]},
- title = {The Combination of Forecasts},
- urldate = {2023-01-07},
- volume = {146},
- year = {1983}
-}
-
-
 @article{elliott_complete_2015,
+	author = {Elliott, Graham and Gargano, Antonio and Timmermann, Allan},
 	title = {Complete Subset Regressions with Large-Dimensional Sets of Predictors},
 	volume = {54},
-	issn = {01651889},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S0165188915000524},
+	number = {1},
 	doi = {10.1016/j.jedc.2015.03.004},
-	language = {en},
-	urldate = {2023-01-06},
 	journal = {Journal of Economic Dynamics and Control},
-	author = {Elliott, Graham and Gargano, Antonio and Timmermann, Allan},
-	month = may,
 	year = {2015},
-	pages = {86--110},
+	pages = {86--110}
 }
 @article{clemen86,
  author = {Robert T. Clemen and Robert L. Winkler},
