--- a/LaTeX/microbusiness-forecasting.tex
+++ b/LaTeX/microbusiness-forecasting.tex
@@ -21,7 +21,7 @@ a4paper, % Paper size, use either a4paper or letterpaper
 ]{CascadeAnalyticsWPS}
 
 %\addbibresource{sample.bib} % BibLaTeX bibliography file
-\usepackage{natbib}
+\usepackage[authoryear]{natbib}
 \usepackage{bm}
 \bibliographystyle{aea}
 \renewcommand{\bibsection}{\section{References}}
