finalized combination modeling

--- a/LaTeX/refs.bib
+++ b/LaTeX/refs.bib
@@ -48,6 +48,15 @@ number  = {1},
 pages = {54-74},
 year = {2020}
 }
+@article{makridakis2022,
+	title = {M5 Competition Accuracy Competition: Results, Findings, and Conclusions},
+	author = {Sypros Makridakis and Evangelos Spiliotis and Vassilios Assimakopoulos},
+	journal = {International Journal of Forecasting},
+	volume = {38},
+	number  = {4},
+	pages = {1346-1364},
+	year = {2022}
+}
 @article{hyndman2008,
 author = {Rob J. Hyndman and Yeasmin Khandakar},
 title = {Automatic Time Series Forecasting: The forecast Package for R},
@@ -164,7 +173,7 @@ abstract = {Forecast combinations have flourished remarkably in the forecasting 
 	author = {Bates, J. M. and Granger, C. W. J.},
 	month = dec,
 	year = {1969},
-	pages = {451},
+	pages = {451-468}
 }
 @techreport{stock_comparison_1998,
 	address = {Cambridge, MA},
